.logs/ui_20251026-122156.log

  You can now view your Streamlit app in your browser.

  URL: http://0.0.0.0:8502

2025-10-26 12:22:02.091 Script compilation error
Traceback (most recent call last):
  File "/home/dzoan/credit-appraisal-agent-poc/.venv/lib/python3.10/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 571, in _run_script
    code = self._script_cache.get_bytecode(script_path)
  File "/home/dzoan/credit-appraisal-agent-poc/.venv/lib/python3.10/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 74, in get_bytecode
    bytecode = compile(  # type: ignore
  File "/home/dzoan/credit-appraisal-agent-poc/services/ui/app.py", line 25
    from __future__ import annotations
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: from __future__ imports must occur at the beginning of the file
2025-10-26 12:22:02.094 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
  Stopping...
